# VulkanRenderer

./: .gitignore  CMakeLists.txt  Makefile  PLAN.txt  imgui.ini
data/: world_data.txt
include/: VulkanRenderer.hpp  app.hpp  buffer.hpp  camera.hpp  chunk.hpp  chunk_manager.hpp  config.hpp  descriptors.hpp  device.hpp  enums.hpp  frame_info.hpp  game_object.hpp  hash.hpp  imgui.hpp  keyboard_controller.hpp  model.hpp  perlin_noise.hpp  pipeline.hpp  renderer.hpp  scope_timer.hpp  simple_render_system.hpp  swapchain.hpp  texture.hpp  texture_config.hpp  texture_manager.hpp  textures.hpp  utils.hpp  window.hpp
include/systems/: point_light_system.hpp  simple_render_system.hpp  texture_render_system.hpp
shaders/: color_shader.frag  color_shader.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  texture.frag  texture_shader.frag  texture_shader.vert  textured_shader.frag  textured_shader.vert  uv_shader.vert  vertex_highlight.frag  vertex_highlight.vert  wireframe.frag  wireframe.vert
src/: app.cpp  buffer.cpp  camera.cpp  chunk.cpp  chunk_manager.cpp  chunk_meshing.cpp  chunk_world.cpp  config.cpp  descriptors.cpp  device.cpp  game_object.cpp  imgui.cpp  keyboard_controller.cpp  main.cpp  model.cpp  perlin_noise.cpp  pipeline.cpp  renderer.cpp  scope_timer.cpp  simple_render_system.cpp  swapchain.cpp  texture.cpp  texture_config.cpp  texture_manager.cpp  textures.cpp  window.cpp
src/systems/: point_light_system.cpp  simple_render_system.cpp  texture_render_system.cpp
